--- a/config/config.properties
+++ b/config/config.properties
@@ -14,4 +14,4 @@ DB_IP = 127.0.0.1
 DB_PORT = 3306
 DB_NAME = xml_parser_schema
 DB_USERNAME = root
-DB_PASSWORD = Incorrect123!
+DB_PASSWORD = <password>
